# tensorstats

./: CMakeLists.txt  NOTES.md  README.md  bench_verify.py  pyproject.toml
src/tensorstats/: __init__.py  core.cpp
tests/: test_tensorstats.py
