[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tensorstats"
version = "0.1.0"
description = "Fast single-pass tensor statistics via Welford/Pébay algorithm"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/tensorstats"]
